# review-agent

./: .env.example  .gitignore  README.md  cli.py  config.yaml  pyproject.toml
config/wordlists/: default.txt
docs/: agent-tool-packs.md  architecture.md
reviewagent/: __init__.py  __main__.py  agent.py  cli.py  config.py  content_violation.py  ingest.py  limits.py  llm.py  memory.py  review_report.py  uvicorn_support.py
reviewagent/adapters/: __init__.py  errors.py  llm_factory.py
reviewagent/api/: __init__.py  batch.py  followup_text_heuristic.py  server.py
reviewagent/clients/: __init__.py  review_api.py
reviewagent/observability/: __init__.py  file_logging.py  langfuse_tracer.py  langsmith_tracer.py  metrics.py  tracing.py
reviewagent/pipeline/: __init__.py  ac_matcher.py  biz_context.py  image_dual_consistency.py  image_dual_llm.py  image_dual_merge.py  image_fingerprint.py  image_light_signals.py  pinyin_expand.py  preprocess.py  wordlist_image.py  wordlist_text.py
reviewagent/rag/: __init__.py  store.py
reviewagent/review_queue/: __init__.py  service.py  store.py
reviewagent/reviewers/: __init__.py  audio.py  base.py  image.py  multi_agent.py  text.py  utils.py  video.py
reviewagent/storage/: __init__.py  phash_blocklist.py  review.py
reviewagent/toolpacks/: __init__.py  base.py  builtins.py  image_detector.py  registry.py  text_detector.py  tools.py  video_detector.py
reviewagent/tui/: __init__.py  app.py  display_config_screen.py  (+4 more)
scripts/: package_bundle.py  package_bundle.sh
tests/: conftest.py  test_ac_matcher.py  test_api_content_type_infer.py  test_batch_summary.py  test_cli_content_type_passthrough.py  test_config_display_patch.py  test_config_llm_api_key_env.py  test_config_llm_patch.py  test_content_violation.py  test_file_logging.py  test_followup_text_heuristic.py  test_image_dual_consistency.py  test_image_dual_llm.py  test_image_dual_merge.py  test_image_fingerprint.py  test_image_light_signals.py  test_ingest_audio.py  test_kitty_keyboard.py  test_phash_blocklist_store.py  test_pinyin_expand.py  test_preprocess.py  test_review_report.py  test_session_review_staging.py  test_toolpacks.py  test_video_detector.py  test_video_pipeline_orchestrator.py  test_wordlist_image_ocr.py  test_wordlist_text.py
(+4 files in other folders)
